--- a/styles/board.css
+++ b/styles/board.css
@@ -11,6 +11,7 @@ h3 {
     margin-top: 140px;
     margin-left: 280px;
     overflow-y: scroll;
+    margin-right: 10px;
 }
 
 .contentBoard {
@@ -27,7 +28,7 @@ h3 {
 }
 
 .col {
-    width: 250px;
+    width: 350px;
     gap: 5px;
 }
 
@@ -46,7 +47,8 @@ h3 {
     align-items: flex-start;
     padding: 18px 15px;
     gap: 10px;
-    width: 200px;
+    /* width: 200px; */
+    width: 95%;
     background: #FFFFFF;
     box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04);
     border-radius: 30px;
@@ -552,6 +554,14 @@ b {
     text-decoration: none;
 }
 
+#ok {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+#ok img {
+    width: 20px;
+}
 @keyframes newcontact {
     0% {
         transform: translate (500%, -50%);
@@ -561,7 +571,59 @@ b {
         transform: translate(-50%, -50%);
     }
 }
+@media (min-width: 1601px) and (max-width: 1800px){
+    .main {
+        margin-left: 250px
+    }
 
+    .headline img {
+        width: 20px;
+    }
+
+    h3 {
+        font-size: 0.8em;
+    }
+
+    .box {
+        font-size: 0.8em;
+        width: 95%;
+    }
+
+    .col {
+        width: 300px;
+    }
+
+    .container {
+        min-width: 90px;
+    }
+}
+
+@media (min-width: 1301px) and (max-width: 1600px){
+    .main {
+        margin-left: 250px
+    }
+
+    .headline img {
+        width: 20px;
+    }
+
+    h3 {
+        font-size: 0.8em;
+    }
+
+    .box {
+        font-size: 0.8em;
+        width: 95%;
+    }
+
+    .col {
+        width: 230px;
+    }
+
+    .container {
+        min-width: 90px;
+    }
+}
 @media (max-width: 1300px) {
 
     .main {
