--- a/templates/add_task_form.html
+++ b/templates/add_task_form.html
@@ -69,8 +69,8 @@
 
 
             <div class="BTN" id="BTN">
-                <button onclick="closeIt()" class="btn light" id="clearBTN">Cancel<img src=""></button>
-                <button class="btn" id="createTaskBTN_task" onclick="addTask('todo')">Create Task<img src=""></button>
+                <button onclick="closeIt()" class="btn light" id="clearBTN">Cancel &#10005;</button>
+                <button class="btn" id="createTaskBTN_task" onclick="addTask('todo')">Create Task  <img src="assets/img/akar-icons_check.svg"></button>
             </div>
             <div class="BTN" id="BTN-save"></div>
        
