--- a/styles/index.css
+++ b/styles/index.css
@@ -70,6 +70,9 @@ body {
     border-radius: 10px;
     cursor: pointer;
 }
+.signup-save:hover {
+    background-color: rgba(11, 173, 221, 1);
+}
 @keyframes point {
     from {transform: translate(-2000px, 0);}
     to {transform: translate(0, 0);}
