--- a/styles/summary.css
+++ b/styles/summary.css
@@ -7,61 +7,74 @@
     --background-grey: #f5f5f5;
 
 }
-body{
+
+body {
     font-family: 'Inter', sans-serif;
     padding: 0;
     margin: 0;
     height: 100vh;
     width: 100vw;
 }
-.summary-main{
+
+.summary-main {
     height: 100%;
     background-color: var(--background-grey);
     box-sizing: border-box;
 }
-.kanban-header-headline{
+
+.kanban-header-headline {
     display: none;
 }
-.padding-header-side{
+
+.padding-header-side {
     padding-top: 140px;
     padding-left: 300px;
 }
-.summary-and-greeting-box{
+
+.summary-and-greeting-box {
     display: flex;
     justify-content: space-around;
     height: 85%;
     gap: var(--gap-between-boxes);
 }
-.summary-line{
+
+.summary-line {
     width: 4px;
     height: 40px;
     background-color: var(--lightblue);
 }
-.summary-headline{
+
+.summary-headline {
     display: flex;
     align-items: center;
     gap: 15px;
     height: 15%;
 }
-.headline-box-line{
+
+.headline-box-line {
     display: flex;
     align-items: center;
     gap: var(--gap-between-boxes);
 }
-.greeting-box, .summary-box{
+
+.greeting-box,
+.summary-box {
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
-.greeting-box{
+
+.greeting-box {
     width: 40%;
 }
-.summary-box{
+
+.summary-box {
     align-items: center;
     gap: var(--gap-between-boxes);
     width: 60%;
 }
-.summary-row{
+
+.summary-row {
     display: flex;
     width: 100%;
     height: 26%;
@@ -69,63 +82,78 @@ body{
     gap: var(--gap-between-boxes);
 }
 
-.single-box{
+.single-box {
     display: flex;
     background-color: white;
     border-radius: 15px;
     color: var(--darkerblue);
     cursor: pointer;
 }
+
 @keyframes showin {
-    from{background-color: var(--darkerblue);
+    from {
+        background-color: var(--darkerblue);
 
     }
-    to{background-color: white;
+
+    to {
+        background-color: white;
 
     }
 }
-.animation1{
+
+.animation1 {
     animation: showin 300ms ease-in-out 50ms;
 }
-.animation2{
+
+.animation2 {
     animation: showin 300ms ease-in-out 100ms;
 }
-.animation3{
+
+.animation3 {
     animation: showin 300ms ease-in-out 150ms;
 }
-.animation4{
+
+.animation4 {
     animation: showin 300ms ease-in-out 200ms;
 }
-.animation5{
+
+.animation5 {
     animation: showin 300ms ease-in-out 250ms;
 }
-.animation6{
+
+.animation6 {
     animation: showin 300ms ease-in-out 300ms;
 }
 
-.single-box:hover{
+.single-box:hover {
     background-color: var(--darkblue);
     color: white;
     box-shadow: var(--boxshadow-hover);
 }
-.single-box:hover .summary-img-box img{
+
+.single-box:hover .summary-img-box img {
     filter: invert(28%) sepia(9%) saturate(190%) hue-rotate(173deg) brightness(17%) contrast(70%);
 }
+
 .single-box:hover .summary-img-box {
     background-color: white;
 }
-.single-first-row{
+
+.single-first-row {
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 30%;
     padding-bottom: 10px;
 }
-.big-number{
+
+.big-number {
     font-size: 50px;
     font-weight: 600;
 }
-.single-third-row{
+
+.single-third-row {
     display: flex;
     width: 100%;
     align-items: center;
@@ -133,7 +161,8 @@ body{
     gap: var(--gap-between-boxes);
 
 }
-.summary-img-box{
+
+.summary-img-box {
     background-color: var(--darkblue);
     width: 60px;
     height: 60px;
@@ -142,16 +171,19 @@ body{
     justify-content: center;
     border-radius: 100%;
 }
-.summary-img-box img{
+
+.summary-img-box img {
     width: 30px;
     object-fit: cover;
 }
-.summary-todo-done{
+
+.summary-todo-done {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.single-second-row{
+
+.single-second-row {
     width: 100%;
     display: flex;
     align-items: center;
@@ -159,63 +191,77 @@ body{
     gap: var(--gap-between-boxes);
 
 }
-.middle-row-line{
+
+.middle-row-line {
     height: 80%;
     width: 4px;
     background-color: lightgrey
 }
-.deadline-text{
+
+.deadline-text {
     display: flex;
     flex-direction: column;
     width: 45%;
 }
-.deadline-headline{
+
+.deadline-headline {
     font-size: 24px;
     font-weight: 600;
 }
-.second-line-urgent-box{
+
+.second-line-urgent-box {
     width: 60px;
     height: 60px;
 }
-.urgent-box{
+
+.urgent-box {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 45%;
     gap: var(--gap-between-boxes);
 }
-.urgent-and-number{
+
+.urgent-and-number {
     display: flex;
     flex-direction: column;
 }
-.greeting{
+
+.greeting {
     font-size: 2rem;
 }
-.greeting-user{
+
+.greeting-user {
     font-size: 3rem;
     font-weight: 600;
     color: var(--lightblue);
 }
-@media (max-width: 900px){
-    .padding-header-side{
+
+@media (max-width: 900px) {
+    .padding-header-side {
         padding-left: 50px;
         padding-top: 100px;
     }
-    .summary-and-greeting-box{
+
+    .summary-and-greeting-box {
         height: 70%;
     }
-    .big-number{
+
+    .big-number {
         font-size: 40px;
     }
-    .kanban-header-headline{
+
+    .kanban-header-headline {
         display: flex;
     }
 }
-@media (max-width: 750px){
-    .big-number{
+
+@media (max-width: 750px) {
+    .big-number {
         font-size: 36px;
     }
-    .greeting-box{
+
+    .greeting-box {
         position: absolute;
         align-items: center;
         background: var(--background-grey);
@@ -224,72 +270,95 @@ body{
         top: 0;
         left: 0;
         animation: showgreetingmobile 1.6s ease-in-out forwards;
-      
-        
-    }
-    @keyframes showgreetingmobile {
-        0%{transform: translateX(0);}
-        30%{transform: translateX(0);}
-        100%{transform: translateX(-150%);}
+
+
     }
 
-    h1{
+    @keyframes showgreetingmobile {
+        0% {
+            transform: translateX(0);
+        }
+
+        30% {
+            transform: translateX(0);
+        }
+
+        100% {
+            transform: translateX(-150%);
+        }
+    }
+
+    h1 {
         margin: 0;
     }
-    .summary-and-greeting-box{
+
+    .summary-and-greeting-box {
         width: 100%;
         height: 65%;
         margin-top: 15px;
         font-size: 14px;
     }
-    .padding-header-side{
+
+    .padding-header-side {
         padding-left: 0;
         padding-top: 120px;
+
     }
-    .deadline-headline{
+
+    .deadline-headline {
         font-size: 20px;
     }
-    .summary-headline{
+
+    .summary-headline {
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
         margin-left: 5%;
         height: 10%;
-       
+
     }
-    .headline-box-line{
+
+    .headline-box-line {
         flex-direction: column-reverse;
         align-items: flex-start;
         gap: 5px;
     }
-    .summary-line{
+
+    .summary-line {
         height: 4px;
         width: 150px;
-    
+
     }
-    .summary-and-greeting-box{
+
+    .summary-and-greeting-box {
         height: 70%;
-    }
-    .summary-box{
+        justify-content: space-around;
+          }
+
+    .summary-box {
         width: 90%;
     }
-    .kanban-header-headline{
-        width: 100%;
+
+    .kanban-header-headline {
+        width: 80%;
         margin-left: 5%;
         margin-top: -30px;
         margin-bottom: 30px;
     }
 
 }
-@media (max-width: 550px){
-    .summary-img-box, .second-line-urgent-box img{
+
+@media (max-width: 550px) {
+
+    .summary-img-box,
+    .second-line-urgent-box img {
         width: 45px;
         height: 45px;
     }
-    .second-line-urgent-box{
+
+    .second-line-urgent-box {
         display: flex;
         align-items: center;
     }
 
 }
-
