--- a/templates/header.html
+++ b/templates/header.html
@@ -9,19 +9,19 @@
 
     <div class="header_right">
         <div class="icon">
-            <a href="../help.html"> <img src="assets/img/questionmark_icon.svg" alt=""></a>
+            <a href="../joinsingle/help.html"> <img src="assets/img/questionmark_icon.svg" alt=""></a>
         </div>
         <div> 
             <img onclick="showLogout()" class="pic" src="assets/img/christina.jpg" alt="">
         </div>
         <div class="log-out-button" id="logout-button">
-            <a href="help.html" class="header-help">
+            <a href="../joinsingle/help.html" class="header-help">
                 Help
             </a>
-            <a href="impressum.html" class="header-legal">
+            <a href="../joinsingle/impressum.html" class="header-legal">
                 Legal notice
             </a>
-            <a href="index.html">
+            <a href="../joinsingle/index.html">
                 Log out
             </a>
         </div>
