--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,24 +3,24 @@
         <img src="assets/img/Capa_logo_small.svg" alt="">
     </div>
     <div class="sites-box">
-        <a href="../joinsingle/summary.html"><div class="menuBox" id="sidebar-summary">
+        <a href="../summary.html"><div class="menuBox" id="sidebar-summary">
             <img src="assets/img/summary_icon.svg" alt="">
             <span class="menuText">Summary</span>
         </div></a>
-        <a href="../joinsingle/board.html"> <div class="menuBox" id="sidebar-board">
+        <a href="../board.html"> <div class="menuBox" id="sidebar-board">
             <img src="assets/img/board_icon.svg" alt="">
             <span class="menuText">Board</span>
         </div></a>
-        <a href="../joinsingle/add_task.html"> <div class="menuBox" id="sidebar-addtask">
+        <a href="../add_task.html"> <div class="menuBox" id="sidebar-addtask">
             <img src="assets/img/addTask_icon.svg" alt="">
             <span class="menuText">Add Task</span>
         </div></a>
-        <a href="../joinsingle/contact.html"><div class="menuBox" id="sidebar-Contacts">
+        <a href="../contact.html"><div class="menuBox" id="sidebar-Contacts">
            <img src="assets/img/contacts_icon.svg" alt="">
             <span class="menuText">Contacts</span>
         </div></a>
     </div>
-    <a href="../joinsingle/impressum.html"><div class="menuBox legal-text" id="sidebar-impressum">
+    <a href="../impressum.html"><div class="menuBox legal-text" id="sidebar-impressum">
         <img src="assets/img/info_icon.svg" alt="">
         <span class="menuText">Legal notice</span>
     </div></a>
